kubernetes/apps/default/llama-gpt/app/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: llama-gpt
  namespace: default
  annotations:
    hajimari.io/enable: 'true'
    nginx.ingress.kubernetes.io/whitelist-source-range: 10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - llama-gpt.${SECRET_DOMAIN}
  rules:
    - host: llama-gpt.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: llama-gpt-ui
                port:
                  number: 3000
